<resources>
    <string name="app_name">Tienda Virtual</string>

    <!--Login cliente-->
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrar</string>

    <!--Registro cliente-->
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombresC">Nombres completos</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etConfPassword">Confirmar password</string>
    <string name="btnRegistrarC">Registrarme</string>

    <!--Productos-->
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>

    <!--Carrito-->
    <string name="txtAgregarP">Agregar producto</string>
    <string name="etCantidad">Cantidad</string>
    <string name="etDescripcion">Descripción</string>
    <string name="btnCalcular">Calcular</string>

</resources>